// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stats/>  renders correctly 1`] = `
<Stats
  stats={
    Array [
      Object {
        "base_stat": 70,
        "stat": Object {
          "name": "hp",
          "url": "https://pokeapi.co/api/v2/stat/1/",
        },
      },
      Object {
        "base_stat": 40,
        "stat": Object {
          "name": "speed",
          "url": "https://pokeapi.co/api/v2/stat/6/",
        },
      },
    ]
  }
  weight={123}
>
  <styled.div>
    <div
      className="sc-bdfBwQ cPDFDP"
    >
      <styled.ul>
        <ul
          className="sc-dlfnbm fthlrP"
        >
          <styled.div>
            <div
              className="sc-gsTCUz GIzOt"
            >
              Stats
            </div>
          </styled.div>
          <styled.li>
            <li
              className="sc-hKgILt eRWIQF"
            >
              weight: 
              123
               kg
            </li>
          </styled.li>
          <styled.li
            key="hp"
          >
            <li
              className="sc-hKgILt eRWIQF"
            >
              hp
              : 
              70
            </li>
          </styled.li>
          <styled.li
            key="speed"
          >
            <li
              className="sc-hKgILt eRWIQF"
            >
              speed
              : 
              40
            </li>
          </styled.li>
        </ul>
      </styled.ul>
    </div>
  </styled.div>
</Stats>
`;

exports[`<Stats/>  without data 1`] = `
<Stats
  stats={Array []}
  weight={123}
>
  <styled.div>
    <div
      className="sc-bdfBwQ cPDFDP"
    >
      <styled.ul>
        <ul
          className="sc-dlfnbm fthlrP"
        >
          <styled.div>
            <div
              className="sc-gsTCUz GIzOt"
            >
              Stats
            </div>
          </styled.div>
          <styled.li>
            <li
              className="sc-hKgILt eRWIQF"
            >
              weight: 
              123
               kg
            </li>
          </styled.li>
        </ul>
      </styled.ul>
    </div>
  </styled.div>
</Stats>
`;
